[project]
name = "itassets"
version = "2.4.37"
description = "DBCA IT assets (both physical and knowledge-based) management system"
authors = [
  { name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" },
  { name = "Rocky Chen", email = "rocky.chen@dbca.wa.gov.au" },
]
license = "Apache-2.0"
requires-python = ">=3.12,<4.0"
dependencies = [
  "django==4.2.20",
  "psycopg[binary,pool]==3.2.6",
  "dbca-utils==2.0.3",
  "django-extensions==3.2.3",
  "python-dotenv==1.0.1",
  "dj-database-url==2.3.0",
  "gunicorn==23.0.0",
  "unicodecsv==0.14.1",
  "python-dateutil==2.9.0",
  "webtemplate-dbca==1.7.2",
  "msal==1.32.0",
  "whitenoise[brotli]==6.9.0",
  "pysftp==0.2.9",
  "xlsxwriter==3.2.2",
  "sentry-sdk[django]==2.28.0",
  "redis==5.2.1",
  "django-storages[azure]==1.14.5",
]

[dependency-groups]
dev = [
  "ipython>=8.31.0",
  "ipdb>=0.13.13",
  "mixer>=7.2.2",
  "pre-commit>=4.0.1",
  "coverage>=7.6.12",
]

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
