[project]
name = "itassets"
version = "2.4.44"
description = "DBCA IT assets (both physical and knowledge-based) management system"
authors = [
  { name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" },
  { name = "Rocky Chen", email = "rocky.chen@dbca.wa.gov.au" },
]
license = "Apache-2.0"
requires-python = ">=3.13,<4.0"
dependencies = [
  "django==5.2.5",
  "psycopg[binary,pool]==3.2.9",
  "dbca-utils==2.1.3",
  "django-extensions==4.1",
  "python-dotenv==1.1.1",
  "dj-database-url==3.0.1",
  "gunicorn==23.0.0",
  "unicodecsv==0.14.1",
  "python-dateutil==2.9.0",
  "webtemplate-dbca==1.8.2",
  "msal==1.33.0",
  "whitenoise[brotli]==6.9.0",
  "pysftp==0.2.9",
  "xlsxwriter==3.2.5",
  "sentry-sdk[django]==2.35.0",
  "redis==6.4.0",
  "django-storages[azure]==1.14.6",
]

[dependency-groups]
dev = [
  "ipython>=9.4.0",
  "ipdb>=0.13.13",
  "mixer>=7.2.2",
  "pre-commit>=4.2.0",
  "coverage>=7.6.12",
]

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
