[project]
name = "itassets"
version = "2.4.49"
description = "DBCA IT assets (both physical and knowledge-based) management system"
authors = [
  { name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" },
  { name = "Rocky Chen", email = "rocky.chen@dbca.wa.gov.au" },
]
license = "Apache-2.0"
requires-python = ">=3.13,<4.0"
dependencies = [
  "django==5.2.7",
  "psycopg[binary,pool]==3.2.11",
  "dbca-utils==2.1.4",
  "django-extensions==4.1",
  "python-dotenv==1.1.1",
  "dj-database-url==3.0.1",
  "gunicorn==23.0.0",
  "unicodecsv==0.14.1",
  "python-dateutil==2.9.0",
  "webtemplate-dbca==1.8.3",
  "requests==2.32.5",
  "msal==1.34.0",
  "whitenoise[brotli]==6.11.0",
  "xlsxwriter==3.2.9",
  "sentry-sdk[django]==2.42.0",
  "redis==6.4.0",
  "django-storages[azure]==1.14.6",
  "paramiko==4.0.0",
]

[dependency-groups]
dev = [
  "ipython>=9.5.0",
  "ipdb>=0.13.13",
  "mixer>=7.2.2",
  "pre-commit>=4.3.0",
  "coverage>=7.11.0",
]

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 140
indent-width = 4
extend-exclude = ["migrations"]

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
